--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1131,6 +1131,9 @@ body {
   font-weight: 600;
   color: #000;
   line-height: calc(49/40);
+  &.white{
+    color: #FFFFFF;
+  }
   @media(max-width: $md) {
     font-size: 38px;
   }
@@ -2804,6 +2807,9 @@ body {
     position: relative;
     border-radius: 10px;
     max-width: 100%;
+    @media(max-width: $sm) {
+      order: -1;
+    }
     & .swiper-slide{
       height: 510px;
       overflow: hidden;
@@ -3301,6 +3307,66 @@ body {
       &:hover {
         text-decoration: none;
       }
+    }
+  }
+}
+
+.banner {
+  position: relative;
+  color: #FFFFFF;
+  min-height: 466px;
+  padding: 65px 0;
+  display: flex;
+  flex-direction: column;
+  @media(max-width: $md) {
+    padding: 80px 0 123px;
+    min-height: 0;
+  }
+  @media(max-width: $sm) {
+    padding: 50px 0 100px;
+  }
+  & .breadcrumb{
+    padding-top: 0;
+    &__container{
+      color: #FFFFFF;
+      padding: 0;
+    }
+  }
+  &__bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+    &:after{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.35);
+    }
+    & img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      user-select: none;
+    }
+  }
+
+  &__container {
+    flex: 1 1 auto;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 123px;
+    @media(max-width: $sm) {
+      gap: 80px;
     }
   }
 }
