--- a/css/style.css
+++ b/css/style.css
@@ -3875,6 +3875,54 @@ span.active ~ .seasons__ico span img:first-child {
   }
 }
 
+.abode__description {
+  margin-top: 50px;
+  display: grid;
+  gap: 40px;
+  grid-template-columns: 405px 1fr;
+}
+@media (max-width: 1023px) {
+  .abode__description {
+    margin-top: 20px;
+    gap: 25px;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
+    grid-auto-rows: 1fr;
+  }
+}
+.abode__desc {
+  padding: 60px 35px 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 24px;
+  color: #424242;
+  background-color: #EEEEEE;
+  border-radius: 10px;
+}
+.abode__desc b {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 20px;
+  color: #5AC1F0;
+}
+@media (max-width: 1023px) {
+  .abode__desc {
+    padding: 30px 24px 40px;
+  }
+}
+@media (max-width: 767px) {
+  .abode__desc {
+    gap: 20px;
+    padding: 20px;
+  }
+  .abode__desc b {
+    font-size: 18px;
+  }
+}
 .abode__body {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -4083,6 +4131,13 @@ span.active ~ .seasons__ico span img:first-child {
   -ms-flex-item-align: start;
       align-self: flex-start;
   margin-top: 12px;
+}
+@media (min-width: 767.1px) {
+  .abode__wrapper.centered {
+    padding-top: 0;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
 }
 @media (max-width: 1023px) {
   .abode__wrapper {
@@ -4782,4 +4837,276 @@ span.active ~ .seasons__ico span img:first-child {
   .banner__container {
     gap: 80px;
   }
+}
+
+.rest {
+  color: #FFFFFF;
+  position: relative;
+  padding: 80px 0;
+}
+@media (max-width: 1023px) {
+  .rest {
+    padding: 60px 0;
+  }
+}
+@media (max-width: 767px) {
+  .rest {
+    padding: 40px 0;
+  }
+}
+.rest__bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  pointer-events: none;
+}
+.rest__bg:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.rest__bg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.rest__container {
+  position: relative;
+  z-index: 2;
+}
+.rest__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+  max-width: 630px;
+}
+@media (max-width: 1023px) {
+  .rest__body {
+    gap: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .rest__body {
+    gap: 25px;
+  }
+}
+.rest__title {
+  font-size: 28px;
+  font-weight: 600;
+}
+.rest__text {
+  line-height: 1.35;
+}
+.rest__button {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 15px;
+  color: #000;
+  padding: 17px 37px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+@media (max-width: 550px) {
+  .rest__button {
+    padding: 15px;
+    -ms-flex-item-align: stretch;
+        align-self: stretch;
+  }
+}
+.rest__button img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 22px;
+          flex: 0 0 22px;
+  width: 22px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: -webkit-filter 0.3s ease 0s;
+  transition: -webkit-filter 0.3s ease 0s;
+  transition: filter 0.3s ease 0s;
+  transition: filter 0.3s ease 0s, -webkit-filter 0.3s ease 0s;
+}
+.rest__button img:last-child {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 35px;
+          flex: 0 0 35px;
+  width: 35px;
+  margin-left: 2px;
+}
+@media (any-hover: hover) {
+  .rest__button:hover {
+    background-color: #5AC1F0;
+    color: #FFFFFF;
+  }
+  .rest__button:hover img {
+    -webkit-filter: brightness(0) invert(1);
+            filter: brightness(0) invert(1);
+  }
+}
+
+.recommend__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+}
+@media (max-width: 1023px) {
+  .recommend__container {
+    gap: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .recommend__container {
+    gap: 30px;
+  }
+}
+.recommend__text {
+  max-width: 540px;
+}
+.recommend__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 68px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  position: relative;
+}
+@media (max-width: 1023px) {
+  .recommend__nav {
+    gap: 40px;
+  }
+}
+@media (max-width: 767px) {
+  .recommend__nav {
+    gap: 30px;
+  }
+}
+.recommend__nav:after {
+  content: "";
+  position: absolute;
+  bottom: 1px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #CFCFCF;
+}
+@media (max-width: 550px) {
+  .recommend__nav {
+    margin-left: -12px;
+    gap: 20px;
+    width: calc(100% + 24px);
+    padding: 0 12px;
+  }
+  .recommend__nav:after {
+    width: calc(100% - 24px);
+    left: 12px;
+  }
+}
+.recommend__nav a {
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: 600;
+  color: #BBBBBB;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  position: relative;
+}
+@media (max-width: 1023px) {
+  .recommend__nav a {
+    font-size: 24px;
+  }
+}
+@media (max-width: 767px) {
+  .recommend__nav a {
+    font-size: 22px;
+    padding-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .recommend__nav a {
+    font-size: 20px;
+  }
+}
+.recommend__nav a:after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 0;
+  background-color: #5AC1F0;
+  z-index: 1;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  height: 3px;
+}
+.recommend__nav a.active {
+  color: #000;
+}
+.recommend__nav a.active:after {
+  width: 100%;
+  left: 0;
+}
+.recommend__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 120px;
+}
+@media (max-width: 1023px) {
+  .recommend__body {
+    gap: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .recommend__body {
+    gap: 60px;
+  }
+}
+.tabs .recommend__body {
+  display: none;
+}
+.tabs .recommend__body.target {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
