--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2708,6 +2708,45 @@ body {
 
 .abode {
 
+  &__description {
+    margin-top: 50px;
+    display: grid;
+    gap: 40px;
+    grid-template-columns: 405px 1fr;
+    @media(max-width: $md) {
+      margin-top: 20px;
+      gap: 25px;
+      grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
+      grid-auto-rows: 1fr;
+    }
+  }
+
+  &__desc {
+    padding: 60px 35px 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    color: #424242;
+    background-color: #EEEEEE;
+    border-radius: 10px;
+    & b{
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: 20px;
+      color: $blue;
+    }
+    @media(max-width: $md) {
+      padding: 30px 24px 40px;
+    }
+    @media(max-width: $sm) {
+      gap: 20px;
+      padding: 20px;
+      & b{
+        font-size: 18px;
+      }
+    }
+  }
+
   &__body {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -2850,6 +2889,12 @@ body {
     & > .button{
       align-self: flex-start;
       margin-top: 12px;
+    }
+    @media(min-width: 767.1px) {
+      &.centered{
+        padding-top: 0;
+        align-self: center;
+      }
     }
     @media(max-width: $md) {
       gap: 30px;
@@ -3369,4 +3414,212 @@ body {
       gap: 80px;
     }
   }
+}
+
+.rest {
+  color: #FFFFFF;
+  position: relative;
+  padding: 80px 0;
+  @media(max-width: $md) {
+    padding: 60px 0;
+  }
+  @media(max-width: $sm) {
+    padding: 40px 0;
+  }
+  &__bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+    &:after{
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+    & img{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      user-select: none;
+    }
+  }
+
+  &__container {
+    position: relative;
+    z-index: 2;
+  }
+
+  &__body {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    max-width: 630px;
+    @media(max-width: $md) {
+      gap: 40px;
+    }
+    @media(max-width: $sm) {
+      gap: 25px;
+    }
+  }
+
+  &__title {
+    font-size: 28px;
+    font-weight: 600;
+  }
+
+  &__text {
+    line-height: 1.35;
+  }
+
+  &__button {
+    align-self: flex-start;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    color: #000;
+    padding: 17px 37px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    @media(max-width: $xs) {
+      padding: 15px;
+      align-self: stretch;
+    }
+    & img{
+      flex: 0 0 22px;
+      width: 22px;
+      user-select: none;
+      transition: filter 0.3s ease 0s;
+      &:last-child{
+        flex: 0 0 35px;
+        width: 35px;
+        margin-left: 2px;
+      }
+    }
+    transition: all 0.3s ease 0s;
+    @media(any-hover: hover) {
+      &:hover {
+        background-color: $blue;
+        color: #FFFFFF;
+        & img{
+          filter: brightness(0) invert(1);
+        }
+      }
+    }
+  }
+}
+
+.recommend {
+
+		&__container {
+      display: flex;
+      flex-direction: column;
+      gap: 60px;
+      @media(max-width: $md) {
+        gap: 40px;
+      }
+      @media(max-width: $sm) {
+        gap: 30px;
+      }
+		}
+
+		&__text {
+      max-width: 540px;
+		}
+
+		&__nav {
+      display: flex;
+      gap: 68px;
+      overflow-x: auto;
+      overflow-y: hidden;
+      position: relative;
+      @media(max-width: $md) {
+        gap: 40px;
+      }
+      @media(max-width: $sm) {
+        gap: 30px;
+      }
+      &:after{
+        content:'';
+        position: absolute;
+        bottom: 1px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #CFCFCF;
+      }
+      @media(max-width: $xs) {
+        margin-left: -12px;
+        gap: 20px;
+        width: calc(100% + 24px);
+        padding: 0 12px;
+        &:after{
+          width: calc(100% - 24px);
+          left: 12px;
+        }
+      }
+      & a{
+        padding-bottom: 20px;
+        text-transform: uppercase;
+        font-size: 28px;
+        font-weight: 600;
+        color: #BBBBBB;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+        position: relative;
+        @media(max-width: $md) {
+          font-size: 24px;
+        }
+        @media(max-width: $sm) {
+          font-size: 22px;
+          padding-bottom: 15px;
+        }
+        @media(max-width: $xs) {
+          font-size: 20px;
+        }
+        &:after{
+          content: '';
+          position: absolute;
+          bottom: 0px;
+          left: 50%;
+          width: 0;
+          background-color: $blue;
+          z-index: 1;
+          transition: all 0.3s ease 0s;
+          height: 3px;
+        }
+        &.active{
+          color: #000;
+          &:after{
+            width: 100%;
+            left: 0;
+          }
+        }
+      }
+		}
+
+		&__body {
+      display: flex;
+      flex-direction: column;
+      gap: 120px;
+      @media(max-width: $md) {
+        gap: 80px;
+      }
+      @media(max-width: $sm) {
+        gap: 60px;
+      }
+      .tabs &{
+        display: none;
+        &.target{
+          display: flex;
+        }
+      }
+		}
 }
